// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`REDUCER Data clears the data 1`] = `
Object {
  "appointmentEnabled": false,
  "errors": Array [],
  "form": Object {
    "contact": Object {
      "error": "",
      "label": "With",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "availability": Array [],
        "name": "",
        "value": "",
      },
    },
    "date": Object {
      "error": "",
      "label": "Date",
      "relatedField": null,
      "type": "date",
      "validated": false,
      "value": "2013-19-06",
    },
    "email": Object {
      "error": "",
      "label": "Email",
      "relatedField": "mobilePhone",
      "required": false,
      "type": "email",
      "validated": false,
      "value": "",
    },
    "firstName": Object {
      "error": "",
      "label": "First Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": false,
      "value": "",
    },
    "lastName": Object {
      "error": "",
      "label": "Last Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": false,
      "value": "",
    },
    "locationSelect": Object {
      "error": "",
      "label": "Location",
      "relatedField": null,
      "required": true,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "timeZone": "",
        "value": "",
      },
    },
    "mobilePhone": Object {
      "error": "",
      "label": "Phone",
      "relatedField": "email",
      "required": false,
      "type": "phone",
      "validated": false,
      "value": "",
    },
    "time": Object {
      "error": "",
      "label": "Time",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "value": "",
      },
    },
  },
  "response": Object {},
  "tiScript": Object {
    "value": "Loading...",
  },
}
`;

exports[`REDUCER Data receives an existing user's data 1`] = `
Object {
  "appointmentEnabled": false,
  "errors": Array [],
  "form": Object {
    "contact": Object {
      "error": "",
      "label": "With",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "availability": Array [],
        "name": "",
        "value": "",
      },
    },
    "date": Object {
      "error": "",
      "label": "Date",
      "relatedField": null,
      "type": "date",
      "validated": false,
      "value": "2013-19-06",
    },
    "email": Object {
      "error": "",
      "label": "Email",
      "relatedField": "mobilePhone",
      "required": false,
      "type": "email",
      "validated": false,
      "value": "",
    },
    "firstName": Object {
      "error": "",
      "label": "First Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": false,
      "value": "",
    },
    "lastName": Object {
      "error": "",
      "label": "Last Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": false,
      "value": "",
    },
    "locationSelect": Object {
      "error": "",
      "label": "Location",
      "relatedField": null,
      "required": true,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "timeZone": "",
        "value": "",
      },
    },
    "mobilePhone": Object {
      "error": "",
      "label": "Phone",
      "relatedField": "email",
      "required": false,
      "type": "phone",
      "validated": false,
      "value": "",
    },
    "time": Object {
      "error": "",
      "label": "Time",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "value": "",
      },
    },
  },
  "response": Object {},
  "tiScript": Object {
    "value": "Loading...",
  },
}
`;

exports[`REDUCER Data receives the user data 1`] = `
Object {
  "appointmentEnabled": false,
  "errors": Array [],
  "form": Object {
    "contact": Object {
      "error": "",
      "label": "With",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "availability": Array [],
        "name": "",
        "value": "",
      },
    },
    "date": Object {
      "error": "",
      "label": "Date",
      "relatedField": null,
      "type": "date",
      "validated": false,
      "value": "2013-19-06",
    },
    "email": Object {
      "error": "",
      "label": "Email",
      "relatedField": "mobilePhone",
      "required": false,
      "type": "email",
      "validated": false,
      "value": "",
    },
    "firstName": Object {
      "error": "",
      "label": "First Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": false,
      "value": "",
    },
    "lastName": Object {
      "error": "",
      "label": "Last Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": false,
      "value": "",
    },
    "locationSelect": Object {
      "error": "",
      "label": "Location",
      "relatedField": null,
      "required": true,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "timeZone": "",
        "value": "",
      },
    },
    "mobilePhone": Object {
      "error": "",
      "label": "Phone",
      "relatedField": "email",
      "required": false,
      "type": "phone",
      "validated": false,
      "value": "",
    },
    "time": Object {
      "error": "",
      "label": "Time",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "value": "",
      },
    },
  },
  "response": Object {
    "user": Object {
      "address": null,
      "birthDate": null,
      "clubId": 659,
      "createdDate": "2022-04-22T14:42:51Z",
      "deletedAt": null,
      "deletedBy": null,
      "email": "gkpeel@gmail.com",
      "firstName": "Geoff",
      "gender": "M",
      "homePhone": null,
      "joinDate": null,
      "lastName": "Peel",
      "locationAccess": Array [],
      "locationId": 4559,
      "mobilePhone": 9088124012,
      "role": Object {
        "id": 99,
        "name": "Prospect",
      },
      "salespersonId": 775565995,
      "source": "T.I.",
      "trainerId": null,
      "updatedBy": null,
      "updatedDate": null,
      "userId": 172195379,
      "workPhone": null,
    },
  },
  "tiScript": Object {
    "value": "Loading...",
  },
}
`;

exports[`REDUCER Data sets data in a field 1`] = `
Object {
  "appointmentEnabled": false,
  "errors": Array [],
  "form": Object {
    "contact": Object {
      "error": "",
      "label": "With",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "availability": Array [],
        "name": "",
        "value": "",
      },
    },
    "date": Object {
      "error": "",
      "label": "Date",
      "relatedField": null,
      "type": "date",
      "validated": false,
      "value": "2013-19-06",
    },
    "email": Object {
      "error": "",
      "label": "Email",
      "relatedField": "mobilePhone",
      "required": false,
      "type": "email",
      "validated": false,
      "value": "",
    },
    "firstName": Object {
      "error": "",
      "label": "First Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": true,
      "value": "Geoff",
    },
    "lastName": Object {
      "error": "",
      "label": "Last Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": false,
      "value": "",
    },
    "locationSelect": Object {
      "error": "",
      "label": "Location",
      "relatedField": null,
      "required": true,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "timeZone": "",
        "value": "",
      },
    },
    "mobilePhone": Object {
      "error": "",
      "label": "Phone",
      "relatedField": "email",
      "required": false,
      "type": "phone",
      "validated": false,
      "value": "",
    },
    "time": Object {
      "error": "",
      "label": "Time",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "value": "",
      },
    },
  },
  "response": Object {},
  "tiScript": Object {
    "value": "Loading...",
  },
}
`;

exports[`REDUCER Employees sets data 1`] = `
Object {
  "appointmentEnabled": false,
  "errors": Array [],
  "form": Object {
    "contact": Object {
      "error": "",
      "label": "With",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "availability": Array [],
        "name": "",
        "value": "",
      },
    },
    "date": Object {
      "error": "",
      "label": "Date",
      "relatedField": null,
      "type": "date",
      "validated": false,
      "value": "2013-19-06",
    },
    "email": Object {
      "error": "",
      "label": "Email",
      "relatedField": "mobilePhone",
      "required": false,
      "type": "email",
      "validated": false,
      "value": "",
    },
    "firstName": Object {
      "error": "",
      "label": "First Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": false,
      "value": "",
    },
    "lastName": Object {
      "error": "",
      "label": "Last Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": false,
      "value": "",
    },
    "locationSelect": Object {
      "error": "",
      "label": "Location",
      "relatedField": null,
      "required": true,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "timeZone": "",
        "value": "",
      },
    },
    "mobilePhone": Object {
      "error": "",
      "label": "Phone",
      "relatedField": "email",
      "required": false,
      "type": "phone",
      "validated": false,
      "value": "",
    },
    "time": Object {
      "error": "",
      "label": "Time",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "value": "",
      },
    },
  },
  "locationEmployees": Array [
    Object {
      "availability": Array [
        Object {
          "startTime": "2022-04-22T14:00:00Z",
        },
      ],
      "clubId": 659,
      "firstName": "Diego",
      "gender": "M",
      "lastName": "Maradona",
      "locationId": 4559,
      "userId": 10,
    },
    Object {
      "availability": Array [
        Object {
          "startTime": "2022-04-22T14:15:00Z",
        },
      ],
      "clubId": 659,
      "firstName": "Jerry",
      "gender": "M",
      "lastName": "Seinfeld",
      "locationId": 4559,
      "userId": 1011,
    },
    Object {
      "availability": Array [
        Object {
          "startTime": "2022-04-22T14:30:00Z",
        },
      ],
      "clubId": 659,
      "firstName": "George",
      "gender": "M",
      "lastName": "Costanza",
      "locationId": 4559,
      "userId": 1033,
    },
  ],
  "response": Object {},
  "tiScript": Object {
    "value": "Loading...",
  },
}
`;

exports[`REDUCER Location sets data 1`] = `
Object {
  "appointmentEnabled": false,
  "errors": Array [],
  "form": Object {
    "contact": Object {
      "error": "",
      "label": "With",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "availability": Array [],
        "name": "",
        "value": "",
      },
    },
    "date": Object {
      "error": "",
      "label": "Date",
      "relatedField": null,
      "type": "date",
      "validated": false,
      "value": "2013-19-06",
    },
    "email": Object {
      "error": "",
      "label": "Email",
      "relatedField": "mobilePhone",
      "required": false,
      "type": "email",
      "validated": false,
      "value": "",
    },
    "firstName": Object {
      "error": "",
      "label": "First Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": false,
      "value": "",
    },
    "lastName": Object {
      "error": "",
      "label": "Last Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": false,
      "value": "",
    },
    "locationSelect": Object {
      "error": "",
      "label": "Location",
      "relatedField": null,
      "required": true,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "timeZone": "",
        "value": "",
      },
    },
    "mobilePhone": Object {
      "error": "",
      "label": "Phone",
      "relatedField": "email",
      "required": false,
      "type": "phone",
      "validated": false,
      "value": "",
    },
    "time": Object {
      "error": "",
      "label": "Time",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "value": "",
      },
    },
  },
  "response": Object {},
  "tiScript": Object {
    "value": Object {
      "script": "<p>This is a test script</p>",
    },
  },
}
`;

exports[`REDUCER Submissions has an invalid submission value 1`] = `
Object {
  "appointmentEnabled": false,
  "errors": Array [],
  "form": Object {
    "contact": Object {
      "error": "",
      "label": "With",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "availability": Array [],
        "name": "",
        "value": "",
      },
    },
    "date": Object {
      "error": "",
      "label": "Date",
      "relatedField": null,
      "type": "date",
      "validated": false,
      "value": "2013-19-06",
    },
    "email": Object {
      "error": "",
      "label": "Email",
      "relatedField": "mobilePhone",
      "required": false,
      "type": "email",
      "validated": false,
      "value": "",
    },
    "firstName": Object {
      "error": "",
      "label": "First Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": false,
      "value": "",
    },
    "lastName": Object {
      "error": "",
      "label": "Last Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": false,
      "value": "",
    },
    "locationSelect": Object {
      "error": "",
      "label": "Location",
      "relatedField": null,
      "required": true,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "timeZone": "",
        "value": "",
      },
    },
    "mobilePhone": Object {
      "error": "",
      "label": "Phone",
      "relatedField": "email",
      "required": false,
      "type": "phone",
      "validated": false,
      "value": "",
    },
    "time": Object {
      "error": "",
      "label": "Time",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "value": "",
      },
    },
  },
  "response": Object {
    "Email": "Please provide an email or phone number",
    "First Name": "This field is required",
    "Last Name": "This field is required",
    "Phone": "Please provide an email or phone number",
    "code": "FORM_SUBMISSION_ERROR",
    "status": 400,
  },
  "tiScript": Object {
    "value": "Loading...",
  },
}
`;

exports[`REDUCER Submissions posts data 1`] = `
Object {
  "appointmentEnabled": false,
  "errors": Array [],
  "form": Object {
    "contact": Object {
      "error": "",
      "label": "With",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "availability": Array [],
        "name": "",
        "value": "",
      },
    },
    "date": Object {
      "error": "",
      "label": "Date",
      "relatedField": null,
      "type": "date",
      "validated": false,
      "value": "2013-19-06",
    },
    "email": Object {
      "error": "",
      "label": "Email",
      "relatedField": "mobilePhone",
      "required": false,
      "type": "email",
      "validated": false,
      "value": "",
    },
    "firstName": Object {
      "error": "",
      "label": "First Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": false,
      "value": "",
    },
    "lastName": Object {
      "error": "",
      "label": "Last Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": false,
      "value": "",
    },
    "locationSelect": Object {
      "error": "",
      "label": "Location",
      "relatedField": null,
      "required": true,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "timeZone": "",
        "value": "",
      },
    },
    "mobilePhone": Object {
      "error": "",
      "label": "Phone",
      "relatedField": "email",
      "required": false,
      "type": "phone",
      "validated": false,
      "value": "",
    },
    "time": Object {
      "error": "",
      "label": "Time",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "value": "",
      },
    },
  },
  "loading": true,
  "response": Object {},
  "tiScript": Object {
    "value": "Loading...",
  },
}
`;

exports[`REDUCER Submissions receives a successful response 1`] = `
Object {
  "appointmentEnabled": false,
  "errors": Array [],
  "form": Object {
    "contact": Object {
      "error": "",
      "label": "With",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "availability": Array [],
        "name": "",
        "value": "",
      },
    },
    "date": Object {
      "error": "",
      "label": "Date",
      "relatedField": null,
      "type": "date",
      "validated": false,
      "value": "2013-19-06",
    },
    "email": Object {
      "error": "",
      "label": "Email",
      "relatedField": "mobilePhone",
      "required": false,
      "type": "email",
      "validated": false,
      "value": "",
    },
    "firstName": Object {
      "error": "",
      "label": "First Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": false,
      "value": "",
    },
    "lastName": Object {
      "error": "",
      "label": "Last Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": false,
      "value": "",
    },
    "locationSelect": Object {
      "error": "",
      "label": "Location",
      "relatedField": null,
      "required": true,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "timeZone": "",
        "value": "",
      },
    },
    "mobilePhone": Object {
      "error": "",
      "label": "Phone",
      "relatedField": "email",
      "required": false,
      "type": "phone",
      "validated": false,
      "value": "",
    },
    "time": Object {
      "error": "",
      "label": "Time",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "value": "",
      },
    },
  },
  "loading": false,
  "response": Object {
    "address": null,
    "barcode": null,
    "birthDate": null,
    "clubId": 659,
    "code": "SUCCESS",
    "createdBy": 132763659,
    "createdDate": "2022-04-22T15:29:53.055399Z",
    "deletedAt": null,
    "deletedBy": null,
    "email": "ti422@aol.com",
    "emailOptOut": true,
    "eventReminderMethod": null,
    "externalSystemIds": Array [],
    "firstName": "Test",
    "gender": "M",
    "homePhone": null,
    "interests": Array [],
    "joinDate": null,
    "lastName": "Inquiry422",
    "locationAccess": null,
    "locationId": 4559,
    "membershipFollowupStatus": null,
    "mobilePhone": null,
    "profilePicHash": null,
    "ptFollowupStatus": null,
    "referredBy": null,
    "role": Object {
      "id": "99",
      "name": "Prospect",
    },
    "salespersonId": 132763659,
    "sendResponseEmails": false,
    "smsOptOut": true,
    "source": "T.I.",
    "status": 202,
    "submissionPoint": 2,
    "timeZone": "America/New_York",
    "trainerId": null,
    "updatedBy": null,
    "updatedDate": null,
    "userId": 172195380,
    "userName": null,
    "userOrigin": Object {
      "originId": 2,
      "originName": "T.I.",
    },
    "workPhone": null,
  },
  "tiScript": Object {
    "value": "Loading...",
  },
}
`;

exports[`REDUCER Submissions receives an error response 1`] = `
Object {
  "appointmentEnabled": false,
  "errors": Array [],
  "form": Object {
    "contact": Object {
      "error": "",
      "label": "With",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "availability": Array [],
        "name": "",
        "value": "",
      },
    },
    "date": Object {
      "error": "",
      "label": "Date",
      "relatedField": null,
      "type": "date",
      "validated": false,
      "value": "2013-19-06",
    },
    "email": Object {
      "error": "",
      "label": "Email",
      "relatedField": "mobilePhone",
      "required": false,
      "type": "email",
      "validated": false,
      "value": "",
    },
    "firstName": Object {
      "error": "",
      "label": "First Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": false,
      "value": "",
    },
    "lastName": Object {
      "error": "",
      "label": "Last Name",
      "relatedField": null,
      "required": true,
      "type": "text",
      "validated": false,
      "value": "",
    },
    "locationSelect": Object {
      "error": "",
      "label": "Location",
      "relatedField": null,
      "required": true,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "timeZone": "",
        "value": "",
      },
    },
    "mobilePhone": Object {
      "error": "",
      "label": "Phone",
      "relatedField": "email",
      "required": false,
      "type": "phone",
      "validated": false,
      "value": "",
    },
    "time": Object {
      "error": "",
      "label": "Time",
      "relatedField": null,
      "type": "select",
      "validated": false,
      "value": Object {
        "name": "",
        "value": "",
      },
    },
  },
  "loading": false,
  "response": Object {
    "error": "Bad Request",
    "messages": Object {
      "code": "(CONN=6594969) DATA TOO LONG FOR COLUMN 'FIRST_NAME' AT ROW 1",
      "message": "could not execute statement",
    },
    "status": "BAD_REQUEST",
    "timestamp": "2022-04-06T15:05:54.903+0000",
  },
  "tiScript": Object {
    "value": "Loading...",
  },
}
`;
